[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/SteamLobby/SteamLobbyList.gd" type="Script" id=2]
[ext_resource path="res://ui/SteamLobby/LobbyEntry.tscn" type="PackedScene" id=3]

[node name="SteamLobbyList" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -134.0
margin_right = 169.0
margin_bottom = 134.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NetworkSetupScreen" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 1.0
margin_right = 337.0
margin_bottom = 267.0

[node name="Panel" type="Panel" parent="NetworkSetupScreen"]
margin_right = 336.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="NetworkSetupScreen/Panel"]
margin_top = 1.0
margin_right = 336.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 10 )
custom_constants/margin_right = 2
custom_constants/margin_left = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="NetworkSetupScreen/Panel/MarginContainer"]
margin_left = 2.0
margin_right = 334.0
margin_bottom = 11.0
custom_constants/separation = 8

[node name="LobbyName" type="Label" parent="NetworkSetupScreen/Panel/MarginContainer/HBoxContainer2"]
margin_right = 145.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.85
text = "Lobby Name"

[node name="Version" type="Label" parent="NetworkSetupScreen/Panel/MarginContainer/HBoxContainer2"]
margin_left = 153.0
margin_right = 238.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Game Version"
align = 1

[node name="PlayerCount" type="Label" parent="NetworkSetupScreen/Panel/MarginContainer/HBoxContainer2"]
margin_left = 246.0
margin_right = 332.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Player Count"
align = 2

[node name="LobbyListContainer" type="ScrollContainer" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 15.0
margin_right = 336.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LobbyList" type="VBoxContainer" parent="NetworkSetupScreen/LobbyListContainer"]
unique_name_in_owner = true
margin_right = 330.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LobbyEntry" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 330.0
margin_bottom = 20.0

[node name="LobbyEntry2" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 21.0
margin_right = 330.0
margin_bottom = 41.0

[node name="LobbyEntry3" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 330.0
margin_bottom = 62.0

[node name="LobbyEntry4" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 63.0
margin_right = 330.0
margin_bottom = 83.0

[node name="LobbyEntry5" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 330.0
margin_bottom = 104.0

[node name="LobbyEntry6" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 105.0
margin_right = 330.0
margin_bottom = 125.0

[node name="LobbyEntry7" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 126.0
margin_right = 330.0
margin_bottom = 146.0

[node name="LobbyEntry8" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 147.0
margin_right = 330.0
margin_bottom = 167.0

[node name="LobbyEntry9" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 330.0
margin_bottom = 188.0

[node name="LobbyEntry10" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 189.0
margin_right = 330.0
margin_bottom = 209.0

[node name="LobbyEntry11" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 330.0
margin_bottom = 230.0

[node name="LobbyEntry12" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 231.0
margin_right = 330.0
margin_bottom = 251.0

[node name="LobbyEntry13" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 252.0
margin_right = 330.0
margin_bottom = 272.0

[node name="LobbyEntry14" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 273.0
margin_right = 330.0
margin_bottom = 293.0

[node name="LobbyEntry15" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 294.0
margin_right = 330.0
margin_bottom = 314.0

[node name="LobbyEntry16" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 315.0
margin_right = 330.0
margin_bottom = 335.0

[node name="LobbyEntry17" parent="NetworkSetupScreen/LobbyListContainer/LobbyList" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 336.0
margin_right = 330.0
margin_bottom = 356.0

[node name="NetworkErrorLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 128.0
margin_right = 337.0
margin_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectingLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -5.5
margin_right = 168.0
margin_bottom = 5.5
text = "Connecting to Steam..."
align = 1

[node name="RefreshTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CreateLobbyDialog" type="Control" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 337.0
margin_bottom = 267.0
mouse_filter = 2

[node name="HostContainer" type="HBoxContainer" parent="CreateLobbyDialog"]
unique_name_in_owner = true
margin_top = -32.0
margin_right = 74.0
margin_bottom = -2.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CreateLobbyDialog/HostContainer"]
margin_right = 74.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="CreateLobbyButton" type="Button" parent="CreateLobbyDialog/HostContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 74.0
margin_bottom = 17.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "create lobby"

[node name="PublicButton" type="CheckButton" parent="CreateLobbyDialog/HostContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 74.0
margin_bottom = 30.0
pressed = true
text = "public"

[node name="LobbyName" type="LineEdit" parent="CreateLobbyDialog"]
unique_name_in_owner = true
margin_left = 77.0
margin_top = -13.0
margin_right = 219.0
margin_bottom = -2.0
max_length = 64
placeholder_text = "lobby name"
caret_blink = true
caret_blink_speed = 0.5

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = 1.0
margin_bottom = 13.0
size_flags_horizontal = 0
text = "go back"

[connection signal="visibility_changed" from="." to="." method="_on_SteamLobbyList_visibility_changed"]
